cai thien test coverage cho conccurency